# snbb_atlas_pack

./: .gitattributes  .gitignore  404.html  CLAUDE.md  README.md  dataset_description.json  index.html  main.py  mkdocs.yml  pyproject.toml
.datalad/: config
.github/workflows/: docs.yml
api/: index.html
atlases/: index.html
atlases/atlas-HCPMMP/: atlas-HCPMMP_dseg.tsv  atlas-HCPMMP_space-fsLR_hemi-L_dseg.label.gii  atlas-HCPMMP_space-fsLR_hemi-R_dseg.label.gii
atlases/atlas-HCPex/: atlas-HCPex_dseg.tsv
atlases/atlas-Schaefer2018N1000n7Tian2020S1/: atlas-Schaefer2018N1000n7Tian2020S1_dseg.tsv
atlases/atlas-Schaefer2018N1000n7Tian2020S2/: atlas-Schaefer2018N1000n7Tian2020S2_dseg.tsv
atlases/atlas-Schaefer2018N1000n7Tian2020S3/: atlas-Schaefer2018N1000n7Tian2020S3_dseg.tsv
atlases/atlas-Schaefer2018N1000n7Tian2020S4/: atlas-Schaefer2018N1000n7Tian2020S4_dseg.tsv
atlases/atlas-Schaefer2018N100n7Tian2020S1/: atlas-Schaefer2018N100n7Tian2020S1_dseg.tsv
atlases/atlas-Schaefer2018N100n7Tian2020S2/: atlas-Schaefer2018N100n7Tian2020S2_dseg.tsv
atlases/atlas-Schaefer2018N100n7Tian2020S3/: atlas-Schaefer2018N100n7Tian2020S3_dseg.tsv
atlases/hcpex/: index.html
development/: index.html
docs/: development.md  index.md  publishing.md  usage.md
notebooks/: 01_getting_started.ipynb  02_visualization.ipynb
publishing/: index.html
scripts/: atlas_hcpex.py  atlas_hcpmmp.py  atlas_schaefer_tian.py  atlas_tian.py  build_atlas_pack.py  utils.py  visualize_atlases.py
search/: search_index.json
snbb_atlas_pack/: _atlas.py
usage/: index.html
(+289 files in other folders)
