[project]
name = "snbb-atlas-pack"
version = "0.1.0"
description = "BIDS-compatible atlas pack for the Strauss Neuroplasticity Brain Bank (SNBB)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "nibabel>=5.4.2",
    "nilearn>=0.13.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "setuptools>=82.0.1",
    "templateflow>=25.1.2",
    "yabplot>=0.2.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["snbb_atlas_pack*"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
]
docs = [
    "mkdocs>=1.6.0,<2.0",
    "mkdocs-material>=9.5.0,<9.6.0",
    "mkdocs-jupyter>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
